# automotive_data_project

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: equipment_options.csv
docs/: ARCHITECTURE.md  CODE_AUDIT.md  DATA_DICTIONARY.md  SCRAPING_POLICY.md
examples/: example_analysis.py
legacy/: README.md
notebooks/: cleaning_and_eda.ipynb  eda_automotive_listings.ipynb
otomoto_ingest/: scrapy.cfg
otomoto_ingest/otomoto_ingest/: items.py  middlewares.py  pipelines.py  settings.py
otomoto_ingest/otomoto_ingest/spiders/: otomoto.py
scripts/: offline_smoke_test.py  run_live_smoke_test.ps1  setup_and_verify.ps1
scripts/legacy/: scraping_multiple_threads.py  scraping_otomoto_skip_duplicates_old.py  scraping_with_vin.py  test.py
scripts/pipeline/: append_data.py  init_db.py  scraping_otomoto_skip_duplicates_V1.py  split_data_for_postgres.py
scripts/utils/: data_cleaning_utils.py  equipment_utils.py  merge_csvs.py
src/automotive_data_project/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  pipeline.py
src/automotive_data_project/scraping/: __init__.py  client.py  exceptions.py  models.py  parser.py
src/automotive_data_project/storage/: database.py  models.py  repositories.py
src/automotive_data_project/transformation/: __init__.py  cleaning.py  (+1 more)
tests/: test_cleaning.py  test_client.py  test_parser.py  test_pipeline.py  test_storage.py
tests/fixtures/: captcha.html  listing_page.html  offer_complete.html  offer_missing_field.html
