[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "automotive-data-project"
version = "0.1.0"
description = "Small ETL pipeline for public automotive listing data."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.13.4",
    "psycopg2-binary==2.9.10",
    "requests==2.32.3",
    "SQLAlchemy==2.0.40",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "ruff==0.11.8",
]

[project.scripts]
automotive-data-project = "automotive_data_project.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that may perform a real request and are skipped by default",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
